# Core

./: .gitignore  README.md  pyproject.toml
totallylit/: __init__.py
totallylit/internal/extension_lookup/: find_package_submodules.py  find_packages.py  get_all_submodules.py  load_globals.py  update_pyi.py
